vbnc/vbnc/tests/Errors/30737.vb
Module A
    Private Sub Main()
    End Sub
End Module